# weave-dev-context

./: .gitignore  .prettierrc  Cargo.toml  README.md  bun.lockb  flake.nix  package.json  tsconfig.json  unocss.config.ts  vite.config.ts
dnas/: dna.yaml  happ.yaml  web-happ.yaml
dnas/zomes/coordinator/generic-zome/: Cargo.toml
dnas/zomes/coordinator/generic-zome/src/: lib.rs
dnas/zomes/integrity/generic-zome/: Cargo.toml
dnas/zomes/integrity/generic-zome/src/: lib.rs
scripts/: coordinator.ts  index.ts  utils.ts
scripts/commands/: build.ts  dev.ts  nix.ts  shell.ts
src/: cli.ts  coordinator.ts  defineConfig.ts  index.ts  utils.ts
src/commands/: build.ts  deploy.ts  dev.ts  init.ts  shell.ts  test.ts
src/generators/: tsconfig.ts  vite.config.ts  vitest.config.ts  weave.config.ts
src/lib/: configGenerators.ts  deploymentUtils.ts  initialize.ts
weave/: config.json  config.ts
