[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/zomes/coordinator/*", "dnas/zomes/integrity/*"]
resolver = "2"

[workspace.dependencies]
hdi = "0.5.0-rc.1"
hdk = "0.4.0-rc.1"
serde = "1"

[workspace.dependencies.profiles]
path = "dnas/zomes/coordinator/profiles"

[workspace.dependencies.profiles_integrity]
path = "dnas/zomes/integrity/profiles"

[workspace.dependencies.syn]
path = "dnas/zomes/coordinator/syn"

[workspace.dependencies.syn_integrity]
path = "dnas/zomes/integrity/syn"
